Add header component

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <link rel="stylesheet" href="dist/css/main.min.css">
 </head>
 <body>
+    <header class="header">
+        <div class="header__inner">
+            <img class="header__logo" src="images/logo.svg" alt="loremipsum.com">
+        </div>
+    </header>
 
     <!-- main site scripts -->
     <script src="dist/js/main.min.js"></script>
