Add hero component

--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
         </div>
     </header>
 
+    <main>
+        <section class="hero">
+            <div class="hero__inner">
+                <div class="hero__text-col">
+                    <h1 class="hero__title">Lorem ipsum dolor sit amet</h1>
+                    <p class="hero__description"><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                    <a href="" class="btn hero__btn">learn more</a>
+                </div>
+                <div class="hero__image-col">
+                    <img class="hero__image" src="images/hero-img.jpg" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
+
     <!-- main site scripts -->
     <script src="dist/js/main.min.js"></script>
 </body>
