--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="hero__inner">
                 <div class="hero__text-col">
                     <h1 class="hero__title">Lorem ipsum dolor sit amet</h1>
-                    <p class="hero__description"><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                    <p class="hero__description"><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong><br>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
                     <a href="" class="btn hero__btn">learn more</a>
                 </div>
                 <div class="hero__image-col">
@@ -38,7 +38,47 @@
                 </div>
             </div>
         </section>
+
+        <section class="explain">
+            <div class="explain__inner">
+                <div class="explain__heading-col">
+                    <div class="section-heading">
+                        <h2 class="section-heading__title">How it works?</h2>
+                    </div>
+                    <div class="dot"></div>
+                </div>
+                <div class="explain__left-col">
+                    <div class="explain-box">
+                        <div class="explain-box__icon-wrapper">
+                            <img src="images/icon-block.svg" alt="" class="explain-box__icon">
+                        </div>
+                        <div class="explain-box__content-wrapper">
+                            <h3 class="explain-box__title explain-box__title--primary">Block the cheaters</h3>
+                            <p class="explain-box__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="explain__right-col">
+                    <div class="explain-box">
+                        <div class="explain-box__icon-wrapper">
+                            <img src="images/icon-find.svg" alt="" class="explain-box__icon">
+                        </div>
+                        <div class="explain-box__content-wrapper">
+                            <h3 class="explain-box__title explain-box__title--secondary">Find good rivals</h3>
+                            <p class="explain-box__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer__inner">
+            <span class="footer__author-info">Copyrights © 2019 by Kerris Group.<br>All rights reserved.</span>
+            <img src="images/ovals.svg" alt="" class="footer__img">
+        </div>
+    </footer>
 
     <!-- main site scripts -->
     <script src="dist/js/main.min.js"></script>
